<resources>
    <string name="app_name">School Admin App</string>
    <string name="all_in_one_school_app">All In One School App</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="passward">Passward</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="welcome">Welcome</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="upload_notice">Upload Notice</string>
    <string name="add_image">Add Image</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="update_faculty">Update Faculty</string>
    <string name="log_out">Log Out</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="notice_title">Notice Title</string>
    <string name="upload_noticebtn">Upload Notice</string>
    <string name="school_code">School Code</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_image1">Upload Image</string>
    <string name="select_pdf">Select PDF</string>
    <string name="pdf_title">PDF title</string>
    <string name="upload_pdf1">Upload PDF</string>
    <string name="upload">Upload</string>
    <string name="add_teacher">Add Teacher</string>
</resources>